--- a/config.toml
+++ b/config.toml
@@ -20,14 +20,14 @@ theme = "hello-friend-ng"
 
 [languages]
   [languages.en]
-    title = "Hello Friend NG"
+    title = "Rukshani Athapathu"
     subtitle = "A simple theme for Hugo"
     keywords = ""
     copyright = ""
     readOtherPosts = "Read other posts"
 
     [languages.en.params.logo]
-      logoText = "hello friend ng"
+      logoText = "$ cd /home"
       logoHomeLink = "/"
     # or
     #
