Add new content

--- a/config.toml
+++ b/config.toml
@@ -65,8 +65,8 @@ theme = "hello-friend-ng"
   [[menu.main]]
     identifier = "about"
     name       = "About"
-    url        = "/about"
+    url        = "about/"
   [[menu.main]]
     identifier = "blog"
     name       = "Blog"
-    url        = "/posts"
+    url        = "posts/"
