--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ theme = "hello-friend-ng"
   keywords = "homepage, blog, science, informatics, development, programming"
   images = [""]
 
-  homeSubtitle = "Computer Networks"
+  homeSubtitle = "Interested in computer networks and protocols"
 
   # Directory name of your blog content (default is `content/posts`)
   contentTypeName = "posts"
